# ChatChemTS

./: .env  Dockerfile  LICENSE  README.md  app.py  chatmolgen.py  deploy.sh  docker-compose.yaml  prompts.py  pyproject.toml  tools.py
analysis_app/: Dockerfile  analysis.py  pyproject.toml
api_chemtsv2/: Dockerfile  main.py  pyproject.toml
chatbot_app/: Dockerfile  app.py  chainlit.md  prompts.py  pyproject.toml  tools.py  util.py
chatbot_app/.chainlit/: config.toml
example_data/: dft_B3LYP_6-31Gx_zinc_for-sale_50000_sampled.csv  dft_b3lyp_6-31gx_zinc_for_sale_5000.csv  p00533_egfr_chembl.csv
model_builder_app/: Dockerfile  app.py  backend.py  pyproject.toml
pages/: analysis.py
