[tool.poetry]
name = "api-chemtsv2"
version = "0.2.0"
description = ""
authors = ["sishida21 <29348731+sishida21@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "api_chemtsv2"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chemtsv2 = "^1.1.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
flaml = {extras = ["automl"], version = "^2.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"