[tool.poetry]
name = "chatmolgen"
version = "0.1.0"
description = ""
authors = ["sishida21 <29348731+sishida21@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
langchain = "0.0.330"
chainlit = "0.7.400"
tiktoken = "^0.5.1"
chromadb = "^0.4.15"
rdkit = "^2023.9.1"
langchain-experimental = "^0.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
