[tool.poetry]
name = "chatchemts"
version = "0.1.0"
description = ""
authors = ["sishida21 <29348731+sishida21@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.9.0"
langchain = "^0.1.1"
chainlit = "^1.0.101"
rdkit = "^2023.9.1"
langchain-experimental = "^0.0.49"
langchain-openai = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
